# obsidisync

./: .dockerignore  .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  tsconfig.test.json
.forgejo/workflows/: ci.yml
.github/workflows/: plugin-ci.yml
rust-server/: Cargo.toml
rust-server/src/: app_session.rs  auth.rs  binary_store.rs  git.rs  http.rs  lib.rs  main.rs  password_auth.rs  paths.rs  protocol.rs  remote.rs  vault.rs  version_registry.rs
rust-server/tests/: service_tests.rs
scripts/: sync-version.mjs
src/: authLoginModal.ts  base64.ts  computerNameModal.ts  conflictParser.ts  conflictResolverModal.ts  fileHistoryView.ts  gitService.ts  ignore.ts  initialSyncModal.ts  main.ts  manifest.ts  oidcModal.ts  protocol.ts  runtime.ts  security.ts  settings.ts  vaultState.ts  versionModal.ts
tests/: base64.test.ts  chunkedUpload.test.ts  computerName.test.ts  conflictParser.test.ts  conflictResolverModal.test.ts  fileHistoryView.test.ts  ignore.test.ts  initialSync.test.ts  manifest.test.ts  oidcLogin.test.ts  platformCompatibility.test.ts  remoteOptional.test.ts  runtime.test.ts  security.test.ts  v1Readiness.test.ts
