[package]
name = "obsidian-git-sync-server"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
getrandom = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
